# metadata-viewer

./: CHANGES.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish_and_tag.yml
metadataviewer/: __init__.py  __main__.py
metadataviewer/dao/: __init__.py  numpy_dao.py  sqlite.py  starfile.py
metadataviewer/dao/model/: __init__.py
metadataviewer/datasets/: output_particle.star  particles.sqlite
metadataviewer/gui/: __init__.py  config.py  constants.py  qtviewer.py  viewer.py
metadataviewer/gui/qt/: constants.py  qtviewer.py
metadataviewer/model/: __init__.py  constants.py  object_manager.py  page.py  renderers.py  utils.py
metadataviewer/tests/: __init__.py  test_metadataviewer_object_manager.py  test_metadataviewer_page.py  test_metadataviewer_startfile.py
metadataviewer/tests/datasets/: classes2D.sqlite  fscs.sqlite  output_class_m2.star  output_particle.star  particles.sqlite  tiltseries.sqlite
